--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   fl_chart: ^1.1.1
   intl: ^0.18.1
+  web_socket_channel: ^3.0.3
+  stomp_dart_client: ^2.1.0
 
 dependency_overrides:
   vector_math: ^2.1.4
