--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.5
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
+  equatable: ^2.0.5
   fl_chart: ^1.1.1
   intl: ^0.18.1
   web_socket_channel: ^3.0.3
